--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=communication-service
+
+# MongoDB Configuration
+spring.data.mongodb.uri=mongodb://admin:password@localhost:27017/communication?authSource=admin
+
+server.port=8082
