--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.application.name=communication-service
 spring.data.mongodb.uri=mongodb://admin:password@localhost:27017/communication?authSource=admin
 
 server.port=8082
+app.rate-limit.max-attempts = 1
+spring.redis.host=localhost
+spring.redis.port=6379
