--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.data.mongodb.uri=mongodb://admin:password@localhost:27017/communication?a
 
 server.port=8082
 app.rate-limit.max-attempts = 100
-spring.redis.host=localhost
-spring.redis.port=6379
+#spring.redis.host=localhost
+#spring.redis.port=6379
