--- a/compose.yaml
+++ b/compose.yaml
@@ -24,7 +24,8 @@ services:
 #    networks:
 #      - otp-network
 
-  redis:
+  # Redis instance for caching
+  redis-cache:
     image: redis:latest
     container_name: redis-cache
     ports:
@@ -32,7 +33,17 @@ services:
 #    networks:
 #      - otp-network
     volumes:
-      - redis_data:/data
+      - redis_cache_data:/data
+
+
+  # Redis instance for rate limiting
+  redis-rate-limit:
+    image: redis:latest
+    container_name: redis-rate-limit
+    ports:
+      - "6380:6379"
+    volumes:
+      - redis_ratelimit_data:/data
 
   # 2. The Base Service (which needs Redis)
 #  base_service:
@@ -62,8 +73,10 @@ services:
     #      - TWILIO_ACCOUNT_SID
     environment:
       SPRING_DATA_MONGODB_URI: mongodb://admin:password@mongodb:27017/communication?authSource=admin
-      SPRING_REDIS_HOST: redis
-      SPRING_REDIS_PORT: 6379
+      CACHE_REDIS_HOST: redis-cache
+      CACHE_REDIS_PORT: 6379
+      RATELIMIT_REDIS_HOST: redis-rate-limit
+      RATELIMIT_REDIS_PORT: 6379
     #      EMAIL: /run/secrets/EMAIL
     #      APP_PASSWORD: /run/secrets/APP_PASSWORD
     #      TWILIO_PHONE_NUMBER: /run/secrets/TWILIO_PHONE_NUMBER
@@ -71,7 +84,8 @@ services:
     #      TWILIO_ACCOUNT_SID: /run/secrets/TWILIO_ACCOUNT_SID
     depends_on:
       - mongodb
-      - redis
+      - redis-cache
+      - redis-rate-limit
 #    networks:
 #      - otp-network
 
@@ -79,7 +93,8 @@ services:
 
 volumes:
   mongodb_data:
-  redis_data:
+  redis_cache_data:
+  redis_ratelimit_data:
 
 #networks:
 #  otp-network:
